# multimodal-python-demo

./: README.md  pyproject.toml
presentations/: multimodal_demo.html  multimodal_demo.qmd
src/wit_talk/: __init__.py  test_OCR.py  test_OCR2.py  test_object_detection.py  test_speech_transcription.py  test_text_to_speech.py
